# verazt

./: .gitattributes  .gitignore  .grammarignore  .rgignore  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md
base/: Cargo.toml  README.md
base/src/: error.rs  file.rs  lib.rs
base/src/metadata/: location.rs
base/tests/: main.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: context.rs  context_new.rs  dependency.rs  executor.rs  lib.rs  manager.rs  pass.rs  pass_id.rs  scheduler.rs
crates/analyze/: Cargo.toml
crates/analyze/src/: cli.rs  lib.rs
crates/analyze/tests/: benchmark.rs  detectors.rs  main.rs  output.rs  vyper_integration.rs
crates/analyzer/: Cargo.toml
crates/analyzer/src/: artifacts.rs  cli.rs  config.rs  context.rs  lib.rs  pipeline.rs
crates/analyzer/tests/: benchmark.rs  detectors.rs  main.rs  output.rs  passes.rs  vyper_integration.rs
crates/benchmark/: Cargo.toml
crates/benchmark/src/: evaluate.rs  main.rs  report.rs
crates/bugs/: Cargo.toml  README.md
crates/bugs/src/: bug.rs  lib.rs  swc.rs
crates/cli/: Cargo.toml
crates/cli/src/: compile.rs  main.rs
crates/frontend/: Cargo.toml  build.rs
crates/frontend/src/: lib.rs
crates/frontend/tests/: compile_libsolidity.rs  compile_smartbugs.rs  integration.rs  main.rs  test_utils.rs
crates/langs/: Cargo.toml
crates/langs/tests/: integration.rs
crates/mlir/: Cargo.toml
crates/mlir/src/: lib.rs
crates/scanner/: Cargo.toml  README.md
crates/scanner/src/: artifacts.rs  cli.rs  config.rs  detector.rs  engine.rs  lib.rs  registry.rs
crates/scanner/tests/: benchmark.rs  detectors.rs  main.rs  output.rs  passes.rs  vyper_integration.rs
crates/scir/: Cargo.toml
crates/scir/src/: attrs.rs  defs.rs  exprs.rs  lits.rs  module.rs  stmts.rs  types.rs
crates/scirs/: Cargo.toml
crates/scirs/src/: lib.rs  verify.rs
crates/smartbench/: Cargo.toml  README.md
crates/smartbench/src/: annotation.rs  lib.rs  main.rs  matcher.rs  report.rs  runner.rs
crates/solidity/: Cargo.toml  README.md
crates/solidity/src/: lib.rs  main.rs
crates/verazt/: Cargo.toml
crates/verazt/src/: compile.rs  main.rs
crates/vyper/: Cargo.toml
crates/vyper/src/: lib.rs  main.rs
crates/vyper/tests/: integration.rs
smartcheck/: Cargo.toml  README.md
smartcheck/src/: lib.rs  smartcheck.rs
smartcheck/src/analysis/: analyzer.rs  mod.rs  task.rs  task_generator_ast.rs  task_generator_ir.rs  task_initiator_ast.rs
smartcheck/src/detectors/: mod.rs
smartcheck/src/engine/: analyzer.rs  config.rs  mod.rs  task_generator_ast.rs  task_generator_ir.rs
smartcheck/src/tasks/: mod.rs  task.rs
smarthunt/: Cargo.toml
smarthunt/src/: config.rs  lib.rs  main.rs
smarthunt/src/analysis/: context.rs  mod.rs  pass.rs  pass_level.rs  scheduler.rs
smarthunt/src/astmatch/: builder.rs  composite.rs  core.rs  matcher.rs  mod.rs  primitives.rs
smarthunt/src/detection/: manager.rs  mod.rs  pass.rs  registry.rs
smarthunt/src/detectors/: cei_violation.rs  centralization_risk.rs  confidence.rs  constant_state_var.rs  context.rs  dead_code.rs  delegatecall.rs  deprecated.rs  detector.rs  floating_pragma.rs  low_level_call.rs  missing_access_control.rs  mod.rs  reentrancy.rs  registry.rs  shadowing.rs  timestamp_dependence.rs  tx_origin.rs  unchecked_call.rs  uninitialized.rs  visibility.rs
smarthunt/src/dfa/: cfg.rs  lattice.rs  mod.rs  solver.rs  utils.rs  var.rs
smarthunt/src/engine/: config.rs  context.rs  mod.rs  parallel.rs  scheduler.rs
smarthunt/src/graph/: call_graph.rs  cfg.rs  inheritance.rs  mod.rs  symbol_table.rs  type_index.rs
smarthunt/src/grep/: builder.rs  composite.rs  core.rs  matcher.rs  mod.rs  primitives.rs
smarthunt/src/irdfa/: cfg.rs  mod.rs  solver.rs  utils.rs
smarthunt/src/output/: formatter.rs  json.rs  markdown.rs  mod.rs  sarif.rs
smarthunt/src/passes/: access_control.rs  call_graph.rs  cfg.rs  data_flow.rs  mod.rs  pass.rs  state_mutation.rs  symbol_table.rs  type_index.rs
smarthunt/src/pipeline/: engine.rs
smarthunt/tests/: detectors.rs  main.rs  output.rs  passes.rs
smartir/: Cargo.toml
smartir/src/: compile.rs  lib.rs
smartir/src/ir/: block.rs  definitions.rs  expressions.rs  literals.rs  mod.rs  source_unit.rs  statements.rs  types.rs  variable.rs
smartir/src/solidity/: mod.rs  transform.rs
solidity/: Cargo.toml
solidity/src/: compile.rs  lib.rs  main.rs  soljc.rs
solidity/src/analysis/: context.rs  dependency.rs  executor.rs  manager.rs  mod.rs  pass_id.rs  pass_representation.rs  scheduler.rs
solidity/src/ast/: block.rs  builtins.rs  definitions.rs  defs.rs  directives.rs  expressions.rs  exprs.rs  ident.rs  identifier.rs  literals.rs  lits.rs  loc.rs  mod.rs  source_unit.rs  specifiers.rs  specs.rs  statements.rs  stmts.rs  types.rs
solidity/src/codegen/: ir_gen.rs  mod.rs
solidity/src/compile/: mod.rs
solidity/src/ir/: block.rs  defs.rs  expressions.rs  exprs.rs  lits.rs  mod.rs  source_unit.rs  statements.rs  stmts.rs
solidity/src/normalize/: elim_func_modifier.rs  elim_import_directives.rs  elim_named_args.rs  elim_using_directives.rs  flatten_expr.rs  flatten_name_index.rs  mod.rs  rename_callees.rs  rename_contracts.rs  rename_definitions.rs  rename_variables.rs  resolve_inheritance.rs  substitution.rs  unroll_unary_tuple.rs
solidity/src/parser/: localizer.rs  mod.rs
solidity/src/parsing/: mod.rs
solidity/src/passes/: elim_func_modifier.rs  elim_import_directives.rs  elim_named_args.rs  elim_using_directives.rs  flatten_expr.rs  flatten_name_index.rs  mod.rs  rename_callees.rs  rename_contracts.rs  rename_definitions.rs  rename_defs.rs  rename_variables.rs  rename_vars.rs  resolve_inheritance.rs  substitution.rs  transform.rs  unroll_unary_tuple.rs
solidity/src/tool/: mod.rs  solc.rs
solidity/src/util/: compare.rs  export.rs  fold.rs  map.rs  normalize.rs  syntactic_comparer.rs  visit.rs
solidity/src/version/: mod.rs
solidity/src/yul/: mod.rs
solidity/tests/libsolidity/: compile_gas_tests.rs  (+7 more)
yul/: Cargo.toml  README.md
yul/src/: cli.rs  globals.rs  lib.rs  yulc.rs
yul/tests/: main.rs  test_all.rs
(+1224 files in other folders)
