[workspace]
members = [
  "crates/anir",
  "crates/bugs",
  "crates/scir",

  "crates/cli",
  "crates/smartbench",
  "crates/analyze",
  "crates/verify",
  "crates/solidity",
  "crates/vyper",
]
exclude = [
  "examples",
]

[workspace.package]
version = "0.0.1"
authors = ["Ta Quang Trung"]
license = "Apache License 2.0"
edition = "2024"
