[package]
name = "base"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

# Dependencies should be alphabetically sorted.
# Use package version in form of "x.y" to avoid updating them frequently.
[dependencies]
backtrace = "0.3"
bat = "0.23"
color-eyre = "0.6"
env_logger = "0.11.8"
log = "0.4"
remain = "0.2"
syntect = "5.0"
tempfile = "3.3.0"
termsize = { package = "terminal_size", version = "0.2" }
textwrap = "0.15"
time-graph = {version = "0.3.0", features = ["table"]}
