[package]
name = "smarthunt"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "smarthunt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.1", features = ["cargo", "derive"] }
clap-verbosity-flag = "2.0.1"
color-eyre = "0.6"
env_logger = "0.11.8"
extlib = { git = "https://github.com/taquangtrung/rust-extlib", rev = "c38c7bd" }
bugs = { path = "../bugs" }
log = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

solidity = { path = "../solidity" }

[dev-dependencies]
tempfile = "3.14"
