[package]
name = "smartir"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bat = "0.23"
color-eyre = "0.6"
either = "1.8"
extlib = { git = "https://github.com/taquangtrung/rust-extlib", rev = "c38c7bd" }
log = "0.4"
meta = { path = "../meta" }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
rust_decimal = "1.27"
solidity = { path = "../solidity" }
yul = { path = "../yul" }
