[package]
name = "yul"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "yulc"
path = "src/yulc.rs"

[dependencies]
backtrace = "0.3"
base = { path = "../base" }
clap = { version = "4.1.1", features = ["cargo"] }
clap-verbosity-flag = "2.0.1"
color-eyre = "0.6"
either = "1.8"
env_logger = "0.11.8"
lazy_static = "1.4.0"
log = "0.4"
num-bigint = { version = "0.4" }
pest = "2.5"
pest_derive = "2.5"
regex = "1.5"
remain = "0.2"
