[package]
name = "analysis"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
bugs = { workspace = true }
frontend = { workspace = true }
log = { workspace = true }
mlir = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
