[package]
name = "analysis"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
log = { workspace = true }
scirs = { workspace = true }
num-traits = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
