[package]
name = "analyze"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
common = { workspace = true }
bugs = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

anir = { workspace = true }
solidity = { workspace = true }
scir = { workspace = true }
vyper = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
smartbench = { workspace = true }
