[package]
name = "analyzer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
bugs = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
color-eyre = { workspace = true }
common = { workspace = true }
env_logger = { workspace = true }
frontend = { workspace = true }
log = { workspace = true }
mlir = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
bugs = { workspace = true }
