[package]
name = "bugs"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
frontend = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }