[package]
name = "cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "verazt"
path = "src/main.rs"

[dependencies]
analyze = { workspace = true }
verify = { workspace = true }
common = { workspace = true }

clap = { workspace = true }

