[package]
name = "langs"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
parallel = ["rayon"]

[dependencies]
backtrace = { workspace = true }
bat = { workspace = true }
mlir = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
codespan-reporting = { workspace = true }
color-eyre = { workspace = true }
either = { workspace = true }
env_logger = { workspace = true }
exec_time = { workspace = true }
common = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }

node-semver = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true, optional = true }
regex = { workspace = true }
remain = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
ureq = { workspace = true }
thiserror = { workspace = true }
time-graph = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
