[package]
name = "scanner"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bugs = { workspace = true }
common = { workspace = true }
frontend = { workspace = true }
scirs = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
env_logger = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
num-traits = { workspace = true }
