[package]
name = "scir"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bat = { workspace = true }
color-eyre = { workspace = true }
extlib = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
