[package]
name = "smartbench"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "smartbench"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.1", features = ["cargo", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
walkdir = "2"
tempfile = "3.14"
bugs = { path = "../bugs" }
smarthunt = { path = "../smarthunt" }
solidity = { path = "../solidity" }
