[package]
name = "smartbench"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "smartbench"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
bugs = { workspace = true }
analyze = { workspace = true }
solidity = { workspace = true }
