[package]
name = "verazt"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "verazt"
path = "src/main.rs"

[dependencies]
analyzer = { workspace = true }
verifier = { workspace = true }
common = { workspace = true }
frontend = { workspace = true }
mlir = { workspace = true }

clap = { workspace = true }

