[package]
name = "vyper"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "vypc"
path = "src/main.rs"

[dependencies]
scir = { path = "../scir" }
extlib = { git = "https://github.com/taquangtrung/rust-extlib", rev = "c38c7bd" }
clap = { version = "4.1.1", features = ["cargo"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.11.8"
log = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
regex = "1.5"
rust_decimal = "1.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3.0"

[dev-dependencies]
serde_json = "1.0"
