[package]
name = "vyper"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "vypc"
path = "src/main.rs"

[dependencies]
scir = { workspace = true }
common = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
node-semver = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
